# example-microservices

./: .gitignore  README.md  azure-pipelines.yml  build_all.sh  ci-install-oatpp-modules.sh  run_all_microservices.sh
book-service/: CMakeLists.txt  Dockerfile
book-service/src/: App.cpp  AppComponent.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
book-service/src/book-service/: App.cpp  AppComponent.hpp  Constants.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
book-service/src/book-service/controller/: BookController.hpp
book-service/src/book-service/db/: Database.cpp  Database.hpp
book-service/src/book-service/dto/: BookDto.hpp
book-service/src/controller/: BookController.hpp
book-service/src/db/: Database.cpp  Database.hpp
book-service/src/db/model/: Book.hpp
facade/: CMakeLists.txt
facade/src/: App.cpp  AppComponent.hpp  Constants.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
facade/src/controller/: BookController.hpp  UserController.hpp
facade/src/dto/: BookDto.hpp  BookInfoDto.hpp  UserDto.hpp
facade/src/facade/: App.cpp  AppComponent.hpp  Constants.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
facade/src/facade/controller/: BookController.hpp  UserController.hpp
facade/src/facade/dto/: BookDto.hpp  BookInfoDto.hpp  UserDto.hpp
facade/src/facade/service/: BookService.hpp
facade/src/service/: BookService.hpp  UserService.hpp
monolith/all-services/: App.cpp  CMakeLists.txt  build-all.sh
user-service/: CMakeLists.txt  Dockerfile
user-service/src/: App.cpp  AppComponent.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
user-service/src/controller/: UserController.hpp
user-service/src/db/: Database.hpp
user-service/src/db/model/: User.hpp
user-service/src/user-service/: App.cpp  AppComponent.hpp  Constants.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp
user-service/src/user-service/controller/: UserController.hpp
user-service/src/user-service/db/: Database.cpp  Database.hpp
user-service/src/user-service/dto/: UserDto.hpp
